<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizapp.AddQuiz">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">
        <TextView
            android:id="@+id/name"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_what_is_your_name"
            />
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_bright"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords"
            />

        <TextView
            android:textSize="20sp"
            android:id="@+id/text_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_what_does_apk_stands_for_in_android" />
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/radioGroup_one"
    >
        <RadioButton
            android:id="@+id/radio_android_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_programming_kit" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_android_kit"
            android:text="@string/android_packaging_kit" />
</RadioGroup>
        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_who_was_not_among_the_founders_of_android"

            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup_two"
            >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/andy_rubin"
            android:id="@+id/radio_rubin"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/larry_page"
            android:id="@+id/radio_larry"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rich_miner"
            android:id="@+id/radio_rich"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_sears"
            android:id="@+id/radio_nick"
            />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_the_first_smartphone_to_run_on_android_platform_was"
            android:id="@+id/text_view_comment"

            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup_three"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nexus"
                android:id="@+id/radio_nexus"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/htc_dream"
                android:id="@+id/radio_htc"

                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_we_can_pass_data_between_activities_in_android_using"
            android:id="@+id/text_view_activity"

            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup_four"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intent"
                android:id="@+id/radio_intent"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_provider"
                android:id="@+id/radio_content"

                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_of_the_above"
                android:id="@+id/radio_none"

                />
        </RadioGroup>
        <TextView
            android:textSize="20sp"
            android:id="@+id/text_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_who_designed_android_logo" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup_five"
            >
            <RadioButton
                android:id="@+id/radio_andy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/andy_rubin1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_blok"
                android:text="@string/irina_blok" />
        </RadioGroup>


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            android:padding="10dp"
            android:layout_below="@+id/questions"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:onClick="submit"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button"
                android:onClick="resetScore"
                />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>

